--- a/css/style.css
+++ b/css/style.css
@@ -544,3 +544,30 @@ th, td{
 	padding: 1em;
 	border: 1px solid var(--dark-grey);
 }
+
+.seatsDiagram td
+    {
+        padding: 0.3rem;
+        text-align: center;
+        margin: 0.3rem;
+        width: 50px;
+        border: 3px solid transparent;
+        display: inline-block;
+        background-color: #efefef;
+        border-radius: 5px;
+    }
+
+
+    .seatsDiagram  td.selected{
+        background-color: greenyellow;
+        -webkit-animation-name: rubberBand;
+        animation-name: rubberBand;
+        animation-duration: 300ms;
+        animation-fill-mode: both;
+    }
+
+    .seatsDiagram td.notAvailable
+    {
+        color: white;
+        background-color: #db2619;
+    }
