--- a/css/style.css
+++ b/css/style.css
@@ -672,19 +672,25 @@ Receipt
 }
  .tabletitle {
   padding: 5px;
-  font-size: 0.5em;
+  font-size: 1em;
   background: #eee;
 }
  .service {
   border-bottom: 1px solid #eee;
 }
 .item {
-  width: 24mm;
+  width: 10em;
 }
  .itemtext {
-  font-size: 0.5em;
+  font-size: 1em;
 }
 
  #legalcopy {
   margin-top: 5mm;
+}
+
+@media print {
+	.no-print {
+		display: none;
+	}
 }
